--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,10 @@ phases:
     commands:
       - echo "Running pre-build installs"
       - apt-get update
-      - apt-get install zip 
+      - apt-get install zip
+      - apt-get install python
+      - apt-get install python-pip
+      - apt-get install awscli 
   pre_build:
     commands:
       - echo "Started building the package"
